src/math.zig

pub extern fn get_str_ptr(str: [*c]u8) [*c]struct_str_data;
pub extern fn get_str_str(str_ptr: [*c]struct_str_data) [*c]u8;
pub extern fn str_len(str: [*c]u8) c_int;
pub extern fn str_max(str: [*c]u8) c_int;
pub extern fn str_fix(str: [*c]u8) c_int;
pub extern fn str_fix_len(str: [*c]u8, len: c_int) c_int;
pub extern fn str_alloc(len: c_int) [*c]u8;
pub extern fn str_free(ptr: [*c]u8) void;
pub extern fn str_mim(original: [*c]u8) [*c]u8;
pub extern fn str_dup(original: [*c]u8) [*c]u8;
pub extern fn str_dup_clone(original: [*c]u8) [*c]u8;
pub extern fn str_dup_printf(fmt: [*c]u8, ...) [*c]u8;
pub extern fn str_ndup(original: [*c]u8, len: c_int) [*c]u8;
pub extern fn str_resize(ptr: [*c][*c]u8, add: c_int) [*c]u8;
pub extern fn str_clone(clone: [*c][*c]u8, original: [*c]u8) void;
pub extern fn str_cpy(ptr: [*c][*c]u8, str: [*c]u8) [*c]u8;
pub extern fn str_cpy_printf(ptr: [*c][*c]u8, fmt: [*c]u8, ...) [*c]u8;
pub extern fn str_ncpy(ptr: [*c][*c]u8, str: [*c]u8, len: c_int) [*c]u8;
pub extern fn str_cat_len(str: [*c][*c]u8, arg: [*c]u8, len: c_int) [*c]u8;
pub extern fn str_cat(str: [*c][*c]u8, arg: [*c]u8) [*c]u8;
pub extern fn str_cat_chr(ptr: [*c][*c]u8, chr: u8) [*c]u8;
pub extern fn str_cat_printf(str: [*c][*c]u8, fmt: [*c]u8, ...) [*c]u8;
pub extern fn str_cap(str: [*c][*c]u8, index: c_int, buf: [*c]u8) [*c]u8;
pub extern fn str_ins(str: [*c][*c]u8, index: c_int, buf: [*c]u8) [*c]u8;
pub extern fn str_ins_printf(str: [*c][*c]u8, index: c_int, fmt: [*c]u8, ...) [*c]u8;
pub extern fn str_mov(str: [*c][*c]u8, dst: c_int, src: c_int) [*c]u8;
pub extern fn str_alloc_stack(size: c_int) [*c]u8;
pub extern fn do_end(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn do_nop(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn do_test(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn init_msdp_table() void;
pub extern fn msdp_find(@"var": [*c]u8) c_int;
pub extern fn arachnos_devel(ses: [*c]struct_session, fmt: [*c]u8, ...) void;
pub extern fn arachnos_mudlist(ses: [*c]struct_session, fmt: [*c]u8, ...) void;
pub extern fn msdp_update_all(@"var": [*c]u8, fmt: [*c]u8, ...) void;
pub extern fn msdp_update_var(ses: [*c]struct_session, buddy: [*c]struct_port_data, @"var": [*c]u8, str: [*c]u8) void;
pub extern fn msdp_update_varf(ses: [*c]struct_session, buddy: [*c]struct_port_data, @"var": [*c]u8, fmt: [*c]u8, ...) void;
pub extern fn msdp_update_var_instant(ses: [*c]struct_session, buddy: [*c]struct_port_data, @"var": [*c]u8, fmt: [*c]u8, ...) void;
pub extern fn msdp_send_update(ses: [*c]struct_session, buddy: [*c]struct_port_data) void;
pub extern fn msdp_get_var(ses: [*c]struct_session, buddy: [*c]struct_port_data, @"var": [*c]u8) [*c]u8;
pub extern fn process_msdp_varval(ses: [*c]struct_session, buddy: [*c]struct_port_data, @"var": [*c]u8, val: [*c]u8) void;
pub extern fn msdp_command_list(ses: [*c]struct_session, buddy: [*c]struct_port_data, index: c_int) void;
pub extern fn msdp_command_report(ses: [*c]struct_session, buddy: [*c]struct_port_data, index: c_int) void;
pub extern fn msdp_command_reset(ses: [*c]struct_session, buddy: [*c]struct_port_data, index: c_int) void;
pub extern fn msdp_command_send(ses: [*c]struct_session, buddy: [*c]struct_port_data, index: c_int) void;
pub extern fn msdp_command_unreport(ses: [*c]struct_session, buddy: [*c]struct_port_data, index: c_int) void;
pub extern fn msdp_configure_arachnos(ses: [*c]struct_session, buddy: [*c]struct_port_data, index: c_int) void;
pub extern fn write_msdp_to_descriptor(ses: [*c]struct_session, buddy: [*c]struct_port_data, src: [*c]u8, length: c_int) void;
pub extern fn msdp2gmcp(src: [*c]u8, srclen: c_int, out: [*c]u8) c_int;
pub extern fn gmcp2msdp(src: [*c]u8, srclen: c_int, out: [*c]u8) c_int;
pub extern fn tintin2msdp(src: [*c]u8, out: [*c]u8) c_int;
pub const msdp_table: [*c]struct_msdp_type = @extern([*c]struct_msdp_type, .{
    .name = "msdp_table",
});
pub extern fn search_nest_base_ses(ses: [*c]struct_session, arg: [*c]u8) [*c]struct_listroot;
pub extern fn search_nest_root(root: [*c]struct_listroot, arg: [*c]u8) [*c]struct_listroot;
pub extern fn search_base_node(root: [*c]struct_listroot, variable: [*c]u8) [*c]struct_listnode;
pub extern fn search_nest_node(root: [*c]struct_listroot, variable: [*c]u8) [*c]struct_listnode;
pub extern fn search_nest_node_path(root: [*c]struct_listroot, variable: [*c]u8, path: [*c]u8) [*c]struct_listnode;
pub extern fn search_nest_node_ses(ses: [*c]struct_session, variable: [*c]u8) [*c]struct_listnode;
pub extern fn search_nest_index(root: [*c]struct_listroot, variable: [*c]u8) c_int;
pub extern fn update_nest_root(root: [*c]struct_listroot, arg: [*c]u8) [*c]struct_listroot;
pub extern fn update_nest_node(root: [*c]struct_listroot, arg: [*c]u8) void;
pub extern fn delete_nest_node(root: [*c]struct_listroot, variable: [*c]u8) c_int;
pub extern fn delete_nest_node_with_wild(root: [*c]struct_listroot, variable: [*c]u8) c_int;
pub extern fn get_nest_size_key(root: [*c]struct_listroot, variable: [*c]u8, result: [*c][*c]u8) c_int;
pub extern fn get_nest_size_val(root: [*c]struct_listroot, variable: [*c]u8, result: [*c][*c]u8) c_int;
pub extern fn get_nest_node_key(root: [*c]struct_listroot, variable: [*c]u8, result: [*c][*c]u8, def: c_int) [*c]struct_listnode;
pub extern fn get_nest_node_val(root: [*c]struct_listroot, variable: [*c]u8, result: [*c][*c]u8, def: c_int) [*c]struct_listnode;
pub extern fn get_nest_index(root: [*c]struct_listroot, variable: [*c]u8, result: [*c][*c]u8, def: c_int) c_int;
pub extern fn show_nest_node(node: [*c]struct_listnode, result: [*c][*c]u8, initialize: c_int) void;
pub extern fn view_nest_node_json(node: [*c]struct_listnode, str_result: [*c][*c]u8, nest: c_int, initialize: c_int) void;
pub extern fn view_nest_node(node: [*c]struct_listnode, str_result: [*c][*c]u8, nest: c_int, initialize: c_int, color: c_int) void;
pub extern fn set_nest_node_ses(ses: [*c]struct_session, arg1: [*c]u8, format: [*c]u8, ...) [*c]struct_listnode;
pub extern fn add_nest_node_ses(ses: [*c]struct_session, arg1: [*c]u8, format: [*c]u8, ...) [*c]struct_listnode;
pub extern fn set_nest_node(root: [*c]struct_listroot, arg1: [*c]u8, format: [*c]u8, ...) [*c]struct_listnode;
pub extern fn add_nest_node(root: [*c]struct_listroot, arg1: [*c]u8, format: [*c]u8, ...) [*c]struct_listnode;
pub extern fn copy_nest_node(dst_root: [*c]struct_listroot, dst: [*c]struct_listnode, src: [*c]struct_listnode) void;
pub extern fn connect_mud(ses: [*c]struct_session, host: [*c]u8, port: [*c]u8) c_int;
pub extern fn write_line_mud(ses: [*c]struct_session, line: [*c]u8, size: c_int) void;
pub extern fn read_buffer_mud(ses: [*c]struct_session) c_int;
pub extern fn readmud(ses: [*c]struct_session) void;
pub extern fn process_more_output(ses: [*c]struct_session, append: [*c]u8, prompt: c_int) void;
pub extern fn process_one_line(ses: [*c]struct_session, linebuf: [*c]u8, prompt: c_int) void;
pub extern fn is_abbrev(str1: [*c]u8, str2: [*c]u8) c_int;
pub extern fn is_abbrev_cmp(str1: [*c]u8, str2: [*c]u8) c_int;
pub extern fn is_member(str1: [*c]u8, str2: [*c]u8) c_int;
pub extern fn is_vowel(str: [*c]u8) c_int;
pub extern fn filename_string(input: [*c]u8, output: [*c]u8) void;
pub extern fn execute(ses: [*c]struct_session, format: [*c]u8, ...) [*c]struct_session;
pub extern fn command(ses: [*c]struct_session, cmd: ?*const COMMAND, format: [*c]u8, ...) [*c]struct_session;
pub extern fn parse_input(ses: [*c]struct_session, input: [*c]u8) [*c]struct_session;
pub extern fn parse_command(ses: [*c]struct_session, input: [*c]u8) [*c]struct_session;
pub extern fn is_speedwalk(ses: [*c]struct_session, input: [*c]u8) c_int;
pub extern fn substitute_speedwalk(ses: [*c]struct_session, input: [*c]u8, output: [*c]u8) [*c]u8;
pub extern fn process_speedwalk(ses: [*c]struct_session, input: [*c]u8) void;
pub extern fn parse_tintin_command(ses: [*c]struct_session, input: [*c]u8) [*c]struct_session;
pub extern fn cnt_arg_all(ses: [*c]struct_session, string: [*c]u8, flag: c_int) c_int;
pub extern fn get_arg_all(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8, verbatim: c_int) [*c]u8;
pub extern fn sub_arg_all(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8, verbatim: c_int, sub: c_int) [*c]u8;
pub extern fn get_arg_in_braces(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8, flag: c_int) [*c]u8;
pub extern fn sub_arg_in_braces(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8, flag: c_int, sub: c_int) [*c]u8;
pub extern fn get_arg_with_spaces(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8, flag: c_int) [*c]u8;
pub extern fn get_arg_stop_spaces(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8, flag: c_int) [*c]u8;
pub extern fn sub_arg_stop_spaces(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8, flag: c_int, sub: c_int) [*c]u8;
pub extern fn get_arg_stop_digits(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8, flag: c_int) [*c]u8;
pub extern fn space_out(string: [*c]u8) [*c]u8;
pub extern fn get_arg_to_brackets(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8) [*c]u8;
pub extern fn get_arg_at_brackets(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8) [*c]u8;
pub extern fn get_arg_in_brackets(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8) [*c]u8;
pub extern fn get_char(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8) [*c]u8;
pub extern fn write_mud(ses: [*c]struct_session, command: [*c]u8, flags: c_int) void;
pub extern fn check_one_line_multi(ses: [*c]struct_session, line: [*c]u8, strip: [*c]u8) void;
pub extern fn check_one_line(ses: [*c]struct_session, line: [*c]u8) void;
pub extern fn do_pathdir(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn is_pathdir(ses: [*c]struct_session, dir: [*c]u8) c_int;
pub extern fn exit_to_dir(ses: [*c]struct_session, name: [*c]u8) c_int;
pub extern fn pdir(node: [*c]struct_listnode) u8;
pub extern fn dir_to_exit(ses: [*c]struct_session, dir: c_int) [*c]u8;
pub extern fn check_append_path(ses: [*c]struct_session, forward: [*c]u8, backward: [*c]u8, delay: f64, force: c_int, follow: c_int) void;
pub extern fn path_create(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_describe(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_delete(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_destroy(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_get(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_goto(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_insert(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_load(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_map(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_move(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_run(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_save(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_start(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_stop(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_swap(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_undo(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_unzip(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_walk(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_zip(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_new(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn path_end(ses: [*c]struct_session, arg: [*c]u8) void;
pub extern fn port_call(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8) [*c]struct_session;
